src/App.css
/* ... */
.story-menu-toggle.open {
  transform: rotate(-90deg);
  transform-origin: 60% 60%;
}
.story-menu-toggle:hover {
  opacity: 1;
  color: black;
}
.story-menu {
  position: absolute;
  display: none;
  cursor: pointer;
  right: 1px;
  top: 32px;
  /*background-color: rgba(9, 30, 66, 0.65);*/
  background: white;
  text-align: right;
  z-index: 6;
  list-style: none;
  color: #202124;
  line-height: 20px;
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
    0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
}
.story-menu li {
  padding-left: 20px !important;
  padding-right: 20px;
  padding-bottom: 6px;
  padding-top: 6px;
}
.story-menu li:hover {
  background: #eee;
}
.story-menu.open {
  display: block;
}

.epic {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.epic-label {
  border: 1px solid white;
  border-radius: 3px;
  display: inline-block;
  margin: 0;
  padding: 2px 5px;
  text-align: center;
  text-decoration: none;
  box-sizing: border-box;
  background-color: white;
  color: #333; /*#42526e;*/
  font-size: 14px;
  line-height: 14px;
  font-weight: Normal;
}

.story section p {
  margin: 0 0 5px 0;
}

.avatars {
  margin: 15px 0 8px 0;
  align-self: end;
}
.story-details {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
}
.issueid {
  color: #5e6c84;
  justify-self: start;
}
.priority {
  height: 16px;
  width: 16px;
  vertical-align: middle;
  justify-self: center;
}
.storypoints {
  font-size: 14px;
  font-weight: 600;
  background-color: #dfe1e6;
  color: #172b4d;
  height: 25px;
  max-height: 25px;
  line-height: 25px;
  width: 25px;
  text-align: center;
  border-radius: 50%;
  justify-self: end;
}

.columns {
  display: grid;
  grid-template-columns: 288px auto 288px;
  grid-column-gap: 10px;
  padding: 0 20px;
}
.hide-todo.columns {
  grid-template-columns: 58px auto 288px;
}
.hide-todo .todo-column {
  max-width: 58px;
}
.todo-column,
.inprogress-column,
.done-column {
  list-style: none;
  background: #f4f5f7;
  max-width: 288px;
}
.inprogress-column {
  max-width: 100%;
}
.column-header {
  color: #5e6c84;
  font-size: 13px;
  text-transform: uppercase;
  margin: 0;
  padding: 12px;
  font-weight: bold;
}
.column-header .in-progress-title {
  width: 290px;
  display: inline-block;
}
.column-header-subtask-headings {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 28px;
  margin-right: 3px;
}
.column-header .todo {
  /*width: 385px;*/
  display: inline-block;
  color: #888;
}
.column-header .in-progress {
  /*width: 385px;*/
  display: inline-block;
}
.column-header .in-progress .blue {
  color: rgb(44, 99, 244);
}
.column-header .in-progress .red {
  color: rgb(234, 67, 53);
}
.column-header .done {
  display: inline-block;
  color: rgb(28, 168, 45);
}
.columns li ul {
  padding-left: 0;
}
.inprogress-column .column-header {
  background-color: rgb(222, 235, 255);
  color: rgb(7, 71, 166);

  display: grid;
  grid-template-columns: 288px auto;
  padding-right: 5px;
}
.done-column .column-header {
  background-color: rgb(227, 252, 239);
  color: rgb(0, 102, 68);
}
.todo-column .column-header {
  background-color: rgb(223, 225, 230);
  color: rgb(66, 82, 110);
}
.blocked {
  /*background-color: rgba(255, 222, 222, 1);*/
  background-color: rgb(255, 235, 235);
  /*color: rgb(166, 7, 7);*/
}
.column-header .collapse-button {
  font-family: Proxima Nova, Helvetica Neue, Helvetica, sans-serif;
  font-weight: 800;
  font-size: 36px;
  position: relative;
  top: -21px;
  float: right;
  user-select: none;
}
.column-header .collapse-button:hover {
  color: black;
  cursor: pointer;
}

.story-with-subtasks {
  display: grid;
  grid-template-columns: 288px auto;
  padding-right: 5px;
}
.story-with-subtasks .story {
  margin: 18px 8px;
}
.subtask-card {
  justify-self: start;
  background-color: white;
  border: 1px solid #ccc;
  border-radius: 2px;
  color: #333;
  cursor: move;
  font-size: 14px;
  margin: 0;
  padding: 8px 10px 8px 5px;
  width: 91%;
  box-shadow: 0 1px 2px 0 rgba(9, 30, 66, 0.25);
  transition: background-color 140ms ease-in-out, border-color 75ms ease-in-out;
  display: grid;
  grid-template-columns: 3px auto 30px;
}
.subtask-card-status {
  width: 4px;
}
.subtask-card-status.status-id-3 {
  background-color: rgb(66, 133, 244);
}
.subtask-card-status.status-id-10009 {
  background-color: rgb(52, 168, 83);
}
.subtask-card-status.status-id-10010 {
  background-color: #ccc;
}
.subtask-card-status.status-id-10909 {
  background-color: rgb(234, 67, 53);
}
.subtask-card.dim {
  opacity: 0.4;
}

.subtask-card p {
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
  line-height: 19px;
  max-height: 76px;
  padding-left: 7px;
}
.subtask-card img {
  justify-self: end;
  align-self: center;
  width: 24px;
  height: 24px;
}
.subtask-card:hover {
  background-color: #f0f0f0;
  opacity: 1;
}
.story-subtask-groups {
  display: grid;
  grid-template-columns: 1fr 25px 1fr 25px 1fr;
  grid-gap: 3px;
  margin-right: 3px;
}
.story-subtask-groups-separator {
  background-color: #f4f5f7;
  width: 25px;
}
.blocked .story-subtask-groups-separator {
  background-color: rgb(255, 235, 235);
}
.story-subtasks {
  display: grid;
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-gap: 7px;
  min-width: 361px;
  margin: 0;
  padding: 18px 0;
}

.subtask-modal-issue-id {
  color: rgb(107, 119, 140);
}
.subtask-modal h1 {
  font-size: 24px;
  font-weight: 500;
}
.subtask-modal-status-title {
  font-size: 0.85em;
  color: rgb(94, 108, 132);
  font-weight: 600;
  margin: 20px 0 5px 0;
  text-transform: uppercase;
  line-height: 12px;
}
.subtask-modal-status {
  color: rgb(255, 255, 255);
  background: rgb(0, 82, 204);
  height: 2.3em;
  line-height: 2.3em;
  border-radius: 3px;
  padding: 0 8px;
  width: 15%;
  font-size: 1em;
  vertical-align: middle;
}
/* ... */

